# pallas-plugin-maa

./: AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
src/pallas_plugin_maa/: __init__.py  command_match.py  config.py  endpoints.py  http_api.py  http_routes.py  store.py  tasks.py
src/pallas_plugin_maa_hub/: __init__.py
