[project]
name = "pallas-plugin-maa"
version = "4.0.0"
description = "Pallas-Bot 官方扩展：QQ 远控 MAA 与分片 hub 入口。"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12,<4.0"
dependencies = [
    "nonebot2>=2.4.0",
    "nonebot-adapter-onebot>=2.4.6",
]

[dependency-groups]
dev = [
    "ruff>=0.11.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pallas_plugin_maa", "src/pallas_plugin_maa_hub"]

[tool.nonebot]
plugin_dirs = []
builtin_plugins = []

[tool.nonebot.plugins]
"@local" = []
pallas-plugin-maa = ['pallas_plugin_maa']
pallas-plugin-maa-hub = ['pallas_plugin_maa_hub']

[tool.nonebot.adapters]
"@local" = []
nonebot-adapter-onebot = [{ name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }]
